<resources>
    <string name="app_name">Food Runner</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_name">Name (Min. 3 characters)</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="home">Home</string>
    <string name="offers">New Offers</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Me</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log out</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="filter">Filter</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="profile_details">Your Profile Details are listed below:</string>
    <string name="go_to_cart">Proceed to Cart</string>
    <string name="confirm_order">Place Order</string>
    <string name="action_search">Search</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="favorites">Favorite Restaurants</string>
    <string name="channel_name">Android Training</string>
    <string name="channel_description">This notification confirms that the order is placed</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="empty_cart">Your cart is currently empty</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>
    <string name="faq_answer_one">Food Runner App is the mobile application with a sole objective of empowering small businesses, local food outlets and other businesses with a tool that enables them to reach customers within a few taps on the screen. Developed by ValueAppz, this mobile application helps you combat the terror of e-commerce giants that are becoming more and more gigantic. With the help of this app, the restaurant owners can market their menu online and also manage everything, from buying process to tracking payments- on their smartphones devices.
    </string>
    <string name="faq_answer_two">A.2 Absolutely! This app is for all those restaurants that have a compelling menu, but are lagging behind simply because they have no online presence. Food Runner App gives you your dose of local SEO by empowering you, and helping you reach customers.
    </string>
    <string name="faq_answer_four">A.4 Unlike other apps, Food Runner App gives you complete ownership of the app control panel. Your customers belong to you and we entirely allow you to manage them. We allow you to manage the customer details, orders and payments. A simple demo will help you run your business easily through your restaurants mobile app.
    </string>
    <string name="faq_answer_three">A.3 Yes, initially our app developer will setup the complete menu as per your requirements. However, later you will have access to add, edit and delete items as per your requirements.</string>
    <string name="faq_answer_five">A.5 Of course. Its your app and it completely belongs to you. We have provided few options to customize the app. You may find the customization features on the apps dashboard, which will allow you to make modifications to the app, as requested. For further details, kindly contact our support team.
    </string>
    <string name="faq_answer_six">A.6 Your application setting allows you to easily add, edit and delete content from your dashboard within minutes. You can update your app content everyday if you want to.For custom changes, our mobile app development team will assist you depending on the type of change you want in the app.
    </string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="email">Email Address</string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter the received OTP below</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="new_password">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your order has been successfully placed!</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="dummy_date">20/12/2018</string>
    <array name="filters">
        <item>Cost(Low to High)</item>
        <item>Cost(High to Low)</item>
        <item>Rating</item>
    </array>

</resources>
